--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,56 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
 	margin: 0;
   	padding: 0;
   	font-family: "Roboto", sans-serif;
   	background-color: #f5f5f2;
 }
+
+.row:before,
+.row:after {
+	content:"";
+	display: table ;
+	clear: both;
+ }
+
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;    
+}
+
+[class*="col-"] {
+    width: 100%;
+    float: left;
+}
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+.col-offset-1 {margin-left: 8.33%;}
+.col-offset-2 {margin-left: 16.66%;}
+.col-offset-3 {margin-left: 25%;}
+.col-offset-4 {margin-left: 33.33%;}
+.col-offset-5 {margin-left: 41.66%;}
+.col-offset-6 {margin-left: 50%;}
+.col-offset-7 {margin-left: 58.33%;}
+.col-offset-8 {margin-left: 66.66%;}
+.col-offset-9 {margin-left: 75%;}
+.col-offset-10 {margin-left: 83.33%;}
+.col-offset-11 {margin-left: 91.66%;}
 
 h1 {
 	color: #a6a6a6;
@@ -37,4 +84,108 @@ a:hover {
 	font-weight: 200;
 	font-size: 16px;
 	color: #ffa200;
+}
+
+/* Top navbar */
+
+.component--top-navbar {
+	width: 100%;
+	height: 60px;
+	background-color: white;
+	margin: 0;
+	color: #9c9c9c;
+	text-align: right;
+	display: flex;
+  	display: -webkit-flex;
+  	justify-content: flex-end;
+}
+
+.top-button-1 {
+	margin: 0;
+	width: 200px;
+	border-left: 1px solid #e3e3e3;
+  	border-right: 1px solid #e3e3e3;
+  	text-align: center;
+}
+
+.top-button-1 img {
+	width: 20px;
+	height: 20px;
+	margin-top: 20px;
+}
+
+.top-button-1 span {
+	color: #a6a6a6;
+	font-weight: 400;
+	font-size: 20px;
+	text-transform: uppercase;
+}
+
+.top-button-1 a {
+	color: #9c9c9c;
+	text-decoration: none;
+	margin: 10px;
+}
+
+.top-button-2 {
+	width: 60px;
+	border-right: 1px solid #e3e3e3;
+	color: #9c9c9c;
+}
+
+.top-button-2 img {
+	width: 25px;
+	height: 25px;
+	margin: 20px 15px 20px 0;
+	color: #9c9c9c;
+}
+
+.top-button-user {
+	text-align: center;
+	width: 250px;
+	border-right: 1px solid #e3e3e3;
+}
+
+.top-button-user img {
+	width: 25px;
+	height: 25px;
+	margin-top: 20px;
+}
+
+.top-button-user a {
+	text-decoration: none;
+	margin: 10px;
+}
+
+.top-button-user span {
+	position: relative;
+	bottom: 8px;
+	font-weight: 400;
+}
+
+.top-button-4 {
+	width: 60px;
+}
+
+.top-button-4 img {
+	width: 25px;
+	height: 25px;
+	margin: 20px 15px 20px 0;
+	color: #9c9c9c;
+}
+
+.top-button-1:hover {
+	background-color: #e3e3e3;
+}
+
+.top-button-2:hover {
+	background-color: #e3e3e3;
+}
+
+.top-button-user:hover {
+	background-color: #e3e3e3;
+}
+
+.top-button-4:hover {
+	background-color: #e3e3e3;
 }
