--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
+/* general rules */
+
 * {
   box-sizing: border-box;
 }
 
 body {
-	margin: 0;
+	margin: 0 0 0 180px;
   	padding: 0;
   	font-family: "Roboto", sans-serif;
   	background-color: #f5f5f2;
@@ -64,7 +66,7 @@ h2 {
 	color: #a6a6a6;
 	font-weight: 500;
 	font-size: 16px;
-	margin: 20px;
+	margin: 0 20px;
 }
 
 p {
@@ -106,12 +108,15 @@ a:hover {
 	border-left: 1px solid #e3e3e3;
   	border-right: 1px solid #e3e3e3;
   	text-align: center;
+  	display: flex;
+  	display: -webkit-flex;
+  	justify-content: center;
+  	align-items: center;
 }
 
 .top-button-1 img {
 	width: 20px;
 	height: 20px;
-	margin-top: 20px;
 }
 
 .top-button-1 span {
@@ -131,46 +136,52 @@ a:hover {
 	width: 60px;
 	border-right: 1px solid #e3e3e3;
 	color: #9c9c9c;
+	display: flex;
+  	display: -webkit-flex;
+  	justify-content: center;
+  	align-items: center;
 }
 
 .top-button-2 img {
 	width: 25px;
 	height: 25px;
-	margin: 20px 15px 20px 0;
 	color: #9c9c9c;
 }
 
 .top-button-user {
 	text-align: center;
-	width: 250px;
+	width: 210px;
 	border-right: 1px solid #e3e3e3;
+	display: flex;
+  	display: -webkit-flex;
+  	justify-content: center;
+  	align-items: center;
 }
 
 .top-button-user img {
 	width: 25px;
 	height: 25px;
-	margin-top: 20px;
 }
 
 .top-button-user a {
 	text-decoration: none;
-	margin: 10px;
 }
 
 .top-button-user span {
-	position: relative;
-	bottom: 8px;
 	font-weight: 400;
+	margin-left: 10px;
 }
 
 .top-button-4 {
 	width: 60px;
+	display: -webkit-flex;
+  	justify-content: center;
+  	align-items: center;
 }
 
 .top-button-4 img {
 	width: 25px;
 	height: 25px;
-	margin: 20px 15px 20px 0;
 	color: #9c9c9c;
 }
 
@@ -188,4 +199,425 @@ a:hover {
 
 .top-button-4:hover {
 	background-color: #e3e3e3;
+}
+
+/* left navbar */
+
+.left-navbar {
+  height: 800px;
+  width: 180px;
+  background-color: #191919;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.left-navbar li {
+  text-decoration: none;
+  font-size: 14px;
+  color: #999999;
+  display: block;
+  height: 50px;
+}
+
+.left-navbar li i, span {
+  padding: 18px 0 0 15px;
+}
+
+.left-navbar a {
+  text-decoration: none;
+  color: #8c8c8c;
+  font-weight: 200;
+}
+
+.left-nav-logo {
+  padding-left: 18px;
+  padding-bottom: 10px;
+}
+
+.hamburger {
+  padding-left: 40px;
+  position: relative;
+  top: -3px;
+}
+
+.sidebar-title {
+  margin-left:10px;
+  color: #8c8c8c;
+}
+
+.left-navbar li:hover {
+  background-color: #282828;
+  border-left: 4px solid #f58220;
+  color: #f1f1f1;
+}
+
+.left-navbar li:hover i {
+  color: #f1f1f1;
+}
+
+.left-navbar li:hover span {
+  color: #f1f1f1;
+}
+
+.left-nav-user {
+  border-top: 1px solid #333333;
+  margin-top: 20px;
+  padding-left: 18px;
+}
+
+.left-nav-user .user-name-lnb {
+  position: relative;
+  top: -15px;
+  color: #56819f;
+  padding-bottom: 40px;
+  padding-left: 5px;
+}
+
+.left-nav-user h1 {
+  font-size: 14px;
+  color: #999999;
+  text-transform: uppercase;
+  padding-top: 20px;
+  font-weight: 400;
+  margin-bottom: 15px;
+}
+
+
+
+
+/* header */
+
+.component--header-1 {
+	width: 100%;
+	height: 60px;
+	border-bottom: 1px solid #e3e3e3;
+	background-color: white;
+	padding-top: 2px;
+}
+
+/* calendar-frame */
+
+.component--calendar-frame {
+	background-color: white;
+	width: 100%;
+	height: 170px;
+	text-align: center;
+	display: flex;
+  	display: -webkit-flex;
+  	justify-content: center;
+  	align-items: center;
+  	border-bottom: 1px solid #e3e3e3;
+}
+
+.component--calendar-frame img {
+	width: 15px;
+	height: 15px;
+	color: #e3e3e3;
+}
+
+.component--calendar-frame span {
+	padding: 0 15px;
+}
+
+.board-caldendar-date1 {
+  	color: #333333;
+  	font-weight: 200;
+}
+
+.board-caldendar-date2 {
+	border-left: 1px solid #e3e3e3;
+	color: #333333;
+  	font-weight: 200;
+  	margin: 0 10px;
+}
+
+.calendar-frame {
+  	border: 1px solid #e3e3e3;
+  	padding: 15px;
+  	border-radius: 5px;
+}
+
+.calendar-frame:hover {
+  	border: 1px solid #b1b1b1;
+  	padding: 15px;
+  	border-radius: 5px;
+}
+
+.component--calendar-frame2 {
+	background-color: white;
+	width: 100%;
+	height: 170px;
+	border-bottom: 1px solid #e3e3e3;
+}
+
+.component--calendar-frame3 {
+	background-color: white;
+	width: 100%;
+	height: 170px;
+	border-bottom: 1px solid #e3e3e3;
+}
+
+.refresh-calendar {
+	width: 52px;
+	height: 52px;
+	background-color: #f58220;
+	border: 1px solid white; 
+	border-radius: 5px;
+	color: white;  
+	margin-left: 5px;
+	display: flex;
+  	display: -webkit-flex;
+  	justify-content: center;
+  	align-items: center;
+}
+
+.refresh-calendar:hover {
+	background-color: #ffa200;		
+}
+
+/* small 2-row table */
+
+.component--small-table {
+	width: 100%;
+	height: 200px;
+	background-color: white;
+	display: flex;
+  	display: -webkit-flex;
+  	justify-content: center;
+  	align-items: center;
+}
+
+.component--small-table table {
+	border-collapse: collapse;
+	width: 80%;
+}
+
+.component--small-table-test {
+	width: 100%;
+	height: 200px;
+	background-color: blue;
+}
+
+.small-table2 td, .small-table3 td {
+  	border-bottom: 1px solid #ccc;
+}  	
+
+.small-table-2-1strow {
+	color: #a6a6a6;
+	font-weight: 500;
+	font-size: 16px;
+	padding: 20px 240px 5px 0;
+}  	
+
+.small-table-2-2ndrow {
+	font-weight: 200;
+	font-size: 16px;
+	color: #333333;
+	padding: 20px 0 5px 0;
+	border-collapse: collapse;
+}
+
+/* header 2 */
+
+.component--small-header {
+	background-color: white;
+	width: 100%;
+	height: 100px;
+	display: flex;
+  	display: -webkit-flex;
+  	justify-content: flex-start;
+  	align-items: center;
+  	padding-left: 42px;
+}
+
+.component--small-header-test {
+	background-color: pink;
+	width: 100%;
+	height: 100px;
+}
+
+/* table buttons */
+
+.component--table-buttons {
+	background-color: white;
+	width: 100%;
+	height: 120px;
+	display: flex;
+  	display: -webkit-flex;
+  	justify-content: center;
+  	align-items: center;
+}
+
+.component--table-buttons-test {
+	background-color: green;
+	width: 100%;
+	height: 120px;
+}
+
+.chart-button1 {
+	width: 100px;
+	padding: 0 0 15px 30px;
+	border-radius: 5px;
+}
+
+.chart-button2 {
+  	width: 70px;
+  	padding: 0 0 15px 30px;
+  	margin: 0 0 0 30px;
+  	border-radius: 5px;
+}
+
+.chart-button3 {
+  	width: 90px;
+  	padding: 0 0 15px 30px;
+  	margin: 0 0 0 30px;
+  	border-radius: 5px;
+}
+
+.small-dot {
+  position: relative;
+  background-color: #ff9a38;
+  width: 15px;
+  height: 15px;
+  border-radius: 25px;
+  top: 16px;
+  left: -22px;
+}
+
+.chart-button1 .small-dot {
+  background-color: #80bfca;
+}
+
+.chart-button3 .small-dot {
+  background-color: #59b66d;
+}
+
+.chart-button1:hover {
+  background-color: #f3f3f1;
+}
+
+.chart-button2:hover {
+  background-color: #f3f3f1;
+}
+
+.chart-button3:hover {
+  background-color: #f3f3f1;
+}
+
+/* table example */
+
+.component--table-example {
+	background-color: white;
+	width: 100%;
+	height: 300px;
+	display: flex;
+  	display: -webkit-flex;
+  	justify-content: center;
+  	align-items: center;
+}
+
+.component--table-example-test {
+	background-color: pink;
+	width: 100%;
+	height: 300px;
+}
+
+/* button 1 */
+
+.component--button1-example {
+	background-color: white;
+	width: 100%;
+	height: 100px;
+	display: flex;
+  	display: -webkit-flex;
+  	justify-content: center;
+  	align-items: center;
+}
+
+.component--button1-test {
+	background-color: red;
+	width: 100%;
+	height: 100px;
+}
+
+.button1-style {
+	background-color: #f58220;
+	height: 50px;
+	width: 130px;
+	padding: 15px 10px 10px 20px;
+	margin: 25px 0 40px 0;
+	color: white;
+	font-size: 18px;
+	font-weight: 200;
+	border-radius: 3px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.button1-style:hover {
+	background-color: #ffa200;
+}
+
+/* large table */
+
+.component--large-table {
+	width: 100%;
+	height: 600px;
+	background-color: white;
+	display: flex;
+  	display: -webkit-flex;
+  	justify-content: center;
+  	align-items: center;
+}
+
+.component--large-table-test {
+	width: 100%;
+	height: 600px;
+	background-color: blue;
+}
+
+.component--large-table table {
+	width: 60%;
+	border-collapse: collapse;
+}
+
+.component--large-table table td {
+  	border-bottom: 1px solid #ccc;
+  	border-top: 1px solid #ccc;
+}
+
+.table-1st-row {
+	color: #a6a6a6;
+	font-weight: 500;
+	font-size: 16px;
+	padding: 15px 20px;
+}
+
+.table-icons img {
+	display: none;
+}
+
+.table-row:hover .table-icons img {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px solid white;
+  width: 15px;
+  height: 15px;
+}
+
+.table-link-icon {
+	margin: 0 10px 0 0;	
+}
+
+.table-trash-icon {
+	
+}
+
+.table-row:hover {
+ 	background-color: #f1f3f3;
 }
