--- a/css/style.css
+++ b/css/style.css
@@ -88,10 +88,30 @@ a:hover {
 	color: #ffa200;
 }
 
+.container {
+	width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}    
+
+.board {
+  	margin: 80px 20px 20px 20px;
+  	background-color: white;
+  	box-shadow: 0px 0px 12px 3px rgba(0,0,0,0.13);
+  	height: 990px;
+}
+
+.board2 {
+	margin: 20px 20px 20px 20px;
+  	background-color: white;
+  	box-shadow: 0px 0px 12px 3px rgba(0,0,0,0.13);
+  	height: 870px;
+}
+
 /* Top navbar */
 
 .component--top-navbar {
-	width: 100%;
+	width: calc(100% - 180px);
 	height: 60px;
 	background-color: white;
 	margin: 0;
@@ -100,6 +120,8 @@ a:hover {
 	display: flex;
   	display: -webkit-flex;
   	justify-content: flex-end;
+  	position: fixed;
+  	margin-top: -80px;
 }
 
 .top-button-1 {
@@ -420,7 +442,6 @@ a:hover {
 .component--small-table-test {
 	width: 100%;
 	height: 200px;
-	background-color: blue;
 }
 
 .small-table2 td, .small-table3 td {
@@ -452,11 +473,10 @@ a:hover {
   	display: -webkit-flex;
   	justify-content: flex-start;
   	align-items: center;
-  	padding-left: 42px;
+  	padding-left: 18px;
 }
 
 .component--small-header-test {
-	background-color: pink;
 	width: 100%;
 	height: 100px;
 }
@@ -474,7 +494,6 @@ a:hover {
 }
 
 .component--table-buttons-test {
-	background-color: green;
 	width: 100%;
 	height: 120px;
 }
@@ -542,7 +561,6 @@ a:hover {
 }
 
 .component--table-example-test {
-	background-color: pink;
 	width: 100%;
 	height: 300px;
 }
@@ -560,7 +578,6 @@ a:hover {
 }
 
 .component--button1-test {
-	background-color: red;
 	width: 100%;
 	height: 100px;
 }
@@ -599,7 +616,6 @@ a:hover {
 .component--large-table-test {
 	width: 100%;
 	height: 600px;
-	background-color: blue;
 }
 
 .component--large-table table {
