--- a/sass/components/_header2.scss
+++ b/sass/components/_header2.scss
@@ -6,7 +6,7 @@
     display: -webkit-flex;
     justify-content: flex-start;
     align-items: center;
-    padding-left: 18px;
+    margin: 0 auto;
 }
 
 .component--small-header-test {
