--- a/css/style.css
+++ b/css/style.css
@@ -502,7 +502,7 @@ a:hover {
 }
 
 .board {
-  margin: 80px 20px 20px 20px;
+  margin: 20px 20px 20px 20px;
   background-color: white;
   box-shadow: 0px 0px 12px 3px rgba(0, 0, 0, 0.13);
 }
@@ -530,6 +530,7 @@ a:hover {
   display: -webkit-flex;
   justify-content: flex-start;
   align-items: center;
+  margin: 0 auto;
 }
 
 .component--small-header-test {
@@ -588,29 +589,43 @@ a:hover {
 
 /* Sections */
 .component--top-navbar {
-  width: calc(100% - 180px);
+  width: 100%;
   height: 60px;
   background-color: white;
   margin: 0;
   color: #9c9c9c;
-  text-align: right;
-  display: flex;
+  display: block;
+  text-align: center;
+  position: relative;
+  margin: 0 auto;
+}
+
+.component--top-navbar ul {
+  list-style-type: none;
+  margin: 0 auto;
+  padding-left: 0;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
   display: -webkit-flex;
   justify-content: flex-end;
-  position: fixed;
-  margin-top: -80px;
+  align-items: center;
+}
+
+.component--top-navbar li {
+  display: inline-block;
+  float: left;
+  margin: 0;
 }
 
 .top-button-1 {
   margin: 0;
   width: 200px;
+  height: 60px;
+  padding-top: 20px;
   border-left: 1px solid #e3e3e3;
   border-right: 1px solid #e3e3e3;
-  text-align: center;
-  display: flex;
-  display: -webkit-flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .top-button-1:hover {
@@ -639,10 +654,8 @@ a:hover {
   width: 60px;
   border-right: 1px solid #e3e3e3;
   color: #9c9c9c;
-  display: flex;
-  display: -webkit-flex;
-  justify-content: center;
-  align-items: center;
+  height: 60px;
+  padding-top: 20px;
 }
 
 .top-button-2:hover {
@@ -653,17 +666,14 @@ a:hover {
   width: 20px;
   height: 20px;
   color: #9c9c9c;
-  margin-left: 10px;
 }
 
 .top-button-user {
   text-align: center;
   width: 210px;
   border-right: 1px solid #e3e3e3;
-  display: flex;
-  display: -webkit-flex;
-  justify-content: center;
-  align-items: center;
+  height: 60px;
+  padding-top: 20px;
 }
 
 .top-button-user:hover {
@@ -682,13 +692,14 @@ a:hover {
 .top-button-user span {
   font-weight: 400;
   margin-left: 10px;
+  position: relative;
+  bottom: 4px;
 }
 
 .top-button-4 {
   width: 60px;
-  display: -webkit-flex;
-  justify-content: center;
-  align-items: center;
+  height: 60px;
+  padding-top: 20px;
 }
 
 .top-button-4:hover {
@@ -707,8 +718,8 @@ a:hover {
   height: 10px;
   background-color: #f58220;
   border-radius: 25px;
-  left: -11px;
-  bottom: 12px;
+  left: 30px;
+  bottom: 27px;
   margin: 0;
 }
 
@@ -1051,210 +1062,6 @@ a:hover {
 
 .table-row:hover {
   background-color: #f1f3f3;
-}
-
-@media (max-width: 767px) {
-  .col-sm-1 {
-    flex: 0 0 8.33333%;
-    max-width: 8.33333%;
-  }
-  .col-sm-2 {
-    flex: 0 0 16.66667%;
-    max-width: 16.66667%;
-  }
-  .col-sm-3 {
-    flex: 0 0 25%;
-    max-width: 25%;
-  }
-  .col-sm-4 {
-    flex: 0 0 33.33333%;
-    max-width: 33.33333%;
-  }
-  .col-sm-5 {
-    flex: 0 0 41.66667%;
-    max-width: 41.66667%;
-  }
-  .col-sm-6 {
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
-  .col-sm-7 {
-    flex: 0 0 58.33333%;
-    max-width: 58.33333%;
-  }
-  .col-sm-8 {
-    flex: 0 0 66.66667%;
-    max-width: 66.66667%;
-  }
-  .col-sm-9 {
-    flex: 0 0 75%;
-    max-width: 75%;
-  }
-  .col-sm-10 {
-    flex: 0 0 83.33333%;
-    max-width: 83.33333%;
-  }
-  .col-sm-11 {
-    flex: 0 0 91.66667%;
-    max-width: 91.66667%;
-  }
-  .col-sm-12 {
-    flex: 0 0 100%;
-    max-width: 100%;
-  }
-}
-
-@media (min-width: 768px) {
-  .col-md-1 {
-    flex: 0 0 8.33333%;
-    max-width: 8.33333%;
-  }
-  .col-md-2 {
-    flex: 0 0 16.66667%;
-    max-width: 16.66667%;
-  }
-  .col-md-3 {
-    flex: 0 0 25%;
-    max-width: 25%;
-  }
-  .col-md-4 {
-    flex: 0 0 33.33333%;
-    max-width: 33.33333%;
-  }
-  .col-md-5 {
-    flex: 0 0 41.66667%;
-    max-width: 41.66667%;
-  }
-  .col-md-6 {
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
-  .col-md-7 {
-    flex: 0 0 58.33333%;
-    max-width: 58.33333%;
-  }
-  .col-md-8 {
-    flex: 0 0 66.66667%;
-    max-width: 66.66667%;
-  }
-  .col-md-9 {
-    flex: 0 0 75%;
-    max-width: 75%;
-  }
-  .col-md-10 {
-    flex: 0 0 83.33333%;
-    max-width: 83.33333%;
-  }
-  .col-md-11 {
-    flex: 0 0 91.66667%;
-    max-width: 91.66667%;
-  }
-  .col-md-12 {
-    flex: 0 0 100%;
-    max-width: 100%;
-  }
-}
-
-@media (min-width: 992px) {
-  .col-lg-1 {
-    flex: 0 0 8.33333%;
-    max-width: 8.33333%;
-  }
-  .col-lg-2 {
-    flex: 0 0 16.66667%;
-    max-width: 16.66667%;
-  }
-  .col-lg-3 {
-    flex: 0 0 25%;
-    max-width: 25%;
-  }
-  .col-lg-4 {
-    flex: 0 0 33.33333%;
-    max-width: 33.33333%;
-  }
-  .col-lg-5 {
-    flex: 0 0 41.66667%;
-    max-width: 41.66667%;
-  }
-  .col-lg-6 {
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
-  .col-lg-7 {
-    flex: 0 0 58.33333%;
-    max-width: 58.33333%;
-  }
-  .col-lg-8 {
-    flex: 0 0 66.66667%;
-    max-width: 66.66667%;
-  }
-  .col-lg-9 {
-    flex: 0 0 75%;
-    max-width: 75%;
-  }
-  .col-lg-10 {
-    flex: 0 0 83.33333%;
-    max-width: 83.33333%;
-  }
-  .col-lg-11 {
-    flex: 0 0 91.66667%;
-    max-width: 91.66667%;
-  }
-  .col-lg-12 {
-    flex: 0 0 100%;
-    max-width: 100%;
-  }
-}
-
-@media (min-width: 1200px) {
-  .col-xl-1 {
-    flex: 0 0 8.33333%;
-    max-width: 8.33333%;
-  }
-  .col-xl-2 {
-    flex: 0 0 16.66667%;
-    max-width: 16.66667%;
-  }
-  .col-xl-3 {
-    flex: 0 0 25%;
-    max-width: 25%;
-  }
-  .col-xl-4 {
-    flex: 0 0 33.33333%;
-    max-width: 33.33333%;
-  }
-  .col-xl-5 {
-    flex: 0 0 41.66667%;
-    max-width: 41.66667%;
-  }
-  .col-xl-6 {
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
-  .col-xl-7 {
-    flex: 0 0 58.33333%;
-    max-width: 58.33333%;
-  }
-  .col-xl-8 {
-    flex: 0 0 66.66667%;
-    max-width: 66.66667%;
-  }
-  .col-xl-9 {
-    flex: 0 0 75%;
-    max-width: 75%;
-  }
-  .col-xl-10 {
-    flex: 0 0 83.33333%;
-    max-width: 83.33333%;
-  }
-  .col-xl-11 {
-    flex: 0 0 91.66667%;
-    max-width: 91.66667%;
-  }
-  .col-xl-12 {
-    flex: 0 0 100%;
-    max-width: 100%;
-  }
 }
 
 /*# sourceMappingURL=style.css.map */
