--- a/sass/sections/_top_navbar.scss
+++ b/sass/sections/_top_navbar.scss
@@ -1,30 +1,46 @@
 .component--top-navbar {
-    width: calc(100% - 180px);
+    width: 100%;
     height: 60px;
     background-color: white;
     margin: 0;
     color: #9c9c9c;
-    text-align: right;
-    display: flex;
-    display: -webkit-flex;
-    justify-content: flex-end;
-    position: fixed;
-    margin-top: -80px;
+    display: block;
+    text-align: center;
+    position: relative;
+    margin: 0 auto; 
+}
+
+.component--top-navbar { 
+    ul {
+        list-style-type:none;
+        margin: 0 auto;
+        padding-left: 0;
+        text-align:center;
+        width:100%;
+        height: 100%;
+        position: absolute;
+        display: -webkit-flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    li {
+        display: inline-block;
+        float: left;
+        margin: 0;  
+    }  
 }
 
 .top-button-1 {
-    margin: 0;
-    width: 200px;
-    border-left: 1px solid #e3e3e3;
-    border-right: 1px solid #e3e3e3;
-    text-align: center;
-    display: flex;
-    display: -webkit-flex;
-    justify-content: center;
-    align-items: center;
-    &:hover {
-        background-color: #e3e3e3;
-    }
+        margin: 0;
+        width: 200px;
+        height: 60px;
+        padding-top: 20px;
+        border-left: 1px solid #e3e3e3;
+        border-right: 1px solid #e3e3e3;
+        &:hover {
+            background-color: #e3e3e3;
+        }
 }
 
 .top-button-1 {
@@ -32,31 +48,29 @@
         width: 17px;
         height: 17px;
     }
-    
+
     span {
-        color: $page-header-color;
+        color: #a6a6a6;
         font-weight: 400;
         font-size: 20px;
         text-transform: uppercase;
-    }
-    
+    }    
+
     a {
         color: #9c9c9c;
         text-decoration: none;
         margin: 10px;
-    }
+    }    
 }
 
 .top-button-2 {
     width: 60px;
     border-right: 1px solid #e3e3e3;
     color: #9c9c9c;
-    display: flex;
-    display: -webkit-flex;
-    justify-content: center;
-    align-items: center;
+    height: 60px;
+    padding-top: 20px;
     &:hover {
-        background-color: #e3e3e3;
+    background-color: #e3e3e3;
     }
 }
 
@@ -65,18 +79,15 @@
         width: 20px;
         height: 20px;
         color: #9c9c9c;
-        margin-left: 10px;
-    }    
+    }
 }
 
 .top-button-user {
     text-align: center;
     width: 210px;
     border-right: 1px solid #e3e3e3;
-    display: flex;
-    display: -webkit-flex;
-    justify-content: center;
-    align-items: center;
+    height: 60px;
+    padding-top: 20px;
     &:hover {
         background-color: #e3e3e3;
     }
@@ -91,22 +102,22 @@
     a {
         text-decoration: none;
     }
-    
+
     span {
         font-weight: 400;
         margin-left: 10px;
+        position: relative;
+        bottom: 4px;
     }
-        
-}
+}    
 
 .top-button-4 {
     width: 60px;
-    display: -webkit-flex;
-    justify-content: center;
-    align-items: center;
+    height: 60px;
+    padding-top: 20px;
     &:hover {
-        background-color: #e3e3e3;
-    }
+    background-color: #e3e3e3;
+  }
 }
 
 .top-button-4 {
@@ -115,7 +126,7 @@
         height: 20px;
         color: #9c9c9c;
     }
-}
+}    
 
 .orange-dot-top {
     position: relative;
@@ -123,7 +134,8 @@
     height: 10px;
     background-color: #f58220;
     border-radius: 25px;
-    left: -11px;
-    bottom: 12px;
+    left: 30px;
+    bottom: 27px;
     margin: 0;
 }
+
