--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,7 +16,7 @@
 @import 'sections/small_table';
 @import 'sections/chart_buttons';
 @import 'sections/large_table';
-
+@import 'sections/mobile_settings';
 
 
 
