--- a/sass/sections/_top_navbar.scss
+++ b/sass/sections/_top_navbar.scss
@@ -1,18 +1,18 @@
 .component--top-navbar {
-    width: 100%;
+    width: calc(100% - 180px);
     height: 60px;
     background-color: white;
     margin: 0;
     color: #9c9c9c;
     display: block;
     text-align: center;
-    position: relative;
-    margin: 0 auto; 
+    position: fixed;
+    margin-top: -80px;
 }
 
 .component--top-navbar { 
     ul {
-        list-style-type:none;
+        list-style-type: none;
         margin: 0 auto;
         padding-left: 0;
         text-align:center;
