--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,6 +17,9 @@
 @import 'sections/chart_buttons';
 @import 'sections/large_table';
 @import 'sections/mobile_settings';
+@import 'sections/form';
+@import 'sections/modallogin';
+@import 'sections/large_table_2';
 
 
 
