--- a/sass/components/_button1.scss
+++ b/sass/components/_button1.scss
@@ -24,9 +24,7 @@
     font-weight: 200;
     border-radius: 3px;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    &:hover :hover {
+    &:hover {
         background-color: #ffa200;
     }
 }
