--- a/sass/components/_header2.scss
+++ b/sass/components/_header2.scss
@@ -1,15 +1,12 @@
 .component--small-header {
     background-color: white;
-    width: 100%;
+    width: 150px;
     height: 100px;
     display: flex;
     display: -webkit-flex;
     justify-content: flex-start;
     align-items: center;
     margin: 0 auto;
+    margin-left: 160px;
 }
 
-.component--small-header-test {
-    width: 100%;
-    height: 100px;
-}
