--- a/sass/sections/_large_table.scss
+++ b/sass/sections/_large_table.scss
@@ -1,6 +1,6 @@
 .component--large-table {
     width: 100%;
-    height: 600px;
+    height: 100%;
     background-color: white;
     display: flex;
     display: -webkit-flex;
@@ -10,11 +10,11 @@
 
 .component--large-table-test {
     width: 100%;
-    height: 600px;
+    height: 20px;
 }
 
 .component--large-table table {
-    width: 80%;
+    width: 100%;
     border-collapse: collapse;
 }
 
@@ -27,15 +27,21 @@
     color: $page-header-color;
     font-weight: 500;
     font-size: 16px;
-    padding: 15px 20px;
+    padding: 20px 20px;
 }
 
 .table-icons img {
     display: none;
 }
 
+.table-href {
+    width: 100%;
+}
+
 .table-icons {
-    width: 80px;
+    width: 100px;
+    margin: 0 0 0 30px;
+    padding: 0 30px 0 30px;
 }
 
 .table-row:hover .table-icons img {
@@ -49,4 +55,15 @@
 
 .table-row:hover {
     background-color: $table-hover-color;
+}
+
+.scroll-wrapper {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+}
+
+.scroll-wrapper table {
+    width: 100%;
+    max-width: 100%;
 }
