--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,8 +18,11 @@
 @import 'sections/large_table';
 @import 'sections/mobile_settings';
 @import 'sections/form';
-@import 'sections/modallogin';
 @import 'sections/large_table_2';
+@import 'sections/page_number';
+@import 'sections/quit_modal';
+@import 'sections/login_modal';
+
 
 
 
