--- a/sass/sections/_large_table_2.scss
+++ b/sass/sections/_large_table_2.scss
@@ -1,7 +1,21 @@
+table {
+	border-collapse: collapse;
+}
+
 .large-table-2 {
-	margin: 80px 0 80px 0;
+	margin: 40px 0 20px 0;
 	text-align: left;
 	padding: 0 30px; 
+}
+
+.lt2-rows {
+	td {
+		padding: 20px 10px;
+		border-bottom: 1px solid #e3e3e3;
+		font-size: 14px;
+		font-weight: 100;
+		color: #333333;
+	}	
 }
 
 .th2-header {
@@ -12,9 +26,29 @@
 	th {
 		color: $page-header-color;
     	font-weight: 500;
-    	font-size: 16px;
-    	&:hover {
-    		color: black;
+    	font-size: 14px;			
     	}
+
+    .lt2-headers-background {
+    	padding: 5px;
+    	width: 110px;
+    	&:hover {
+    		color: #333333;
+    		background-color: #f2f2f2;
+    		border-radius: 5px;
+		}	
+	}
+
+	img {
+		width: 10px;
+		height: 10px;
+		display: none;
+		margin: 0 0 0 2px;
+	}
+
+	.lt2-headers-background  {
+		&:hover img {
+			display: inline-block;
+		}
 	}
 }
