--- a/css/style.css
+++ b/css/style.css
@@ -1526,7 +1526,7 @@ table {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 9999;
   left: 0;
   top: 0;
   width: 100%;
@@ -1542,7 +1542,6 @@ table {
   margin: auto;
   border: 1px solid #888;
   width: 30%;
-  height: 30%;
 }
 
 .modal-content h1 {
@@ -1550,7 +1549,7 @@ table {
 }
 
 .cancel-button {
-  display: inline;
+  display: inline-block;
   text-align: center;
   color: white;
   font-size: 18px;
@@ -1567,7 +1566,7 @@ table {
 }
 
 .quit-button {
-  display: inline;
+  display: inline-block;
   text-align: center;
   color: white;
   font-size: 18px;
@@ -1584,8 +1583,7 @@ table {
 }
 
 .quit-modal-buttons {
-  float: right;
-  padding: 25px 0 0 0;
+  text-align: center;
 }
 
 .modal2 {
@@ -1613,7 +1611,8 @@ table {
   color: #aaaaaa;
   font-size: 28px;
   font-weight: bold;
-  padding: 5px 10px;
+  padding: 10px 15px;
+  float: right;
 }
 
 .close2:hover,
@@ -1629,6 +1628,7 @@ table {
 
 .login-modal-options {
   display: inline-block;
+  test-align: center;
 }
 
 .login-modal-options img {
@@ -1638,14 +1638,15 @@ table {
 }
 
 .type-login-frame {
+  display: inline-block;
+  text-align: center;
   font-size: 14px;
   color: #a6a6a6;
   margin: 25px 10px 30px 30px;
-  padding: 10px 30px 10px 10px;
+  padding: 10px 10px 10px 10px;
   width: 200px;
   height: 100%;
   border: 1px solid #a6a6a6;
-  float: left;
   border-radius: 2px;
 }
 
@@ -1655,14 +1656,15 @@ table {
 }
 
 .type-password-frame {
+  display: inline-block;
+  text-align: center;
   font-size: 14px;
   color: #a6a6a6;
   margin: 25px 0 30px 20px;
-  padding: 10px 30px 10px 10px;
+  padding: 10px 10px 10px 10px;
   width: 200px;
   height: 100%;
   border: 1px solid #a6a6a6;
-  float: left;
   border-radius: 2px;
 }
 
@@ -1672,15 +1674,15 @@ table {
 }
 
 .enter-button-frame {
+  display: inline-block;
   text-align: center;
-  margin: 25px 10px 30px 20px;
+  margin: 25px 0 35px 20px;
   width: 150px;
   height: 100%;
-  padding: 14px 20px;
+  padding: 18px 20px 11px 20px;
   font-size: 14px;
   color: white;
   background-color: #f58220;
-  float: right;
   border-radius: 2px;
 }
 
@@ -1694,6 +1696,10 @@ table {
 
 .type-password-frame span {
   padding: 0 0 0 10px;
+}
+
+.enter-button-frame span {
+  padding: 0 0 5px 0;
 }
 
 /*# sourceMappingURL=style.css.map */
